@@ -1,0 +1,34 @@
+# 
+# The contents of this file are subject to the Mozilla Public
+# License Version 1.1 (the "License"); you may not use this file
+# except in compliance with the License. You may obtain a copy of
+# the License at http://www.mozilla.org/MPL/
+# 
+# Software distributed under the License is distributed on an "AS
+# IS" basis, WITHOUT WARRANTY OF ANY KIND, either express or
+# implied. See the License for the specific language governing
+# rights and limitations under the License.
+# 
+# The Original Code is Transformiix XSLT Processor.
+# 
+# The Initial Developer of the Original Code is Axel Hecht.
+# Portions created by Axel Hecht are  Copyright (C) Axel Hecht.
+# All Rights Reserved.
+# 
+# Contributor(s):
+#	Axel Hecht <axel@pike.org>
+# 
+
+DEPTH           = ..\..\..\..\..\..\..
+
+CHROME_DIR=packages\transformiix
+CHROME_CONTENT_DIR=transformiix\content
+
+CHROME_CONTENT = \
+                .\transformiix.xul \
+                .\transformiix.js \
+		.\simple.xml \
+		.\simplexsl.xml \
+                $(NULL)
+
+include <$(DEPTH)\config\rules.mak>
